# switchbot-ble-to-influxdb

./: .env.template  .gitignore  LICENSE  README.md  README_JA.md  justfile  main.py  pyproject.toml
.devcontainer/: Dockerfile  README.md  devcontainer.json
.github/workflows/: action.yml  lint.yml
reference/: meter_ble_open_api.md
systemd/: README.md  README_JA.md  switchbot-ble-to-influxdb.service  switchbot-ble-to-influxdb.timer
tests/integration/: test_main_integration.py
tests/unit/: test_main.py
